force-app/main/core/objects/DeploymentInformation__c/DeploymentInformation__c.object-meta.xml
<CustomObject>
    <label>Deployment Information</label>
    <nameField>
        <label>Deployment Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deployment Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>