force-app/main/core/objects/DeploymentInformation__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <label>Author</label>
    <type>TextArea</type>
</CustomField>