force-app/main/core/objects/DeploymentInformation__c/fields/BranchName__c.field-meta.xml
<CustomField>
    <fullName>BranchName__c</fullName>
    <label>Branch Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>