force-app/main/core/objects/DeploymentInformation__c/fields/Commit__c.field-meta.xml
<CustomField>
    <fullName>Commit__c</fullName>
    <label>Commit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>