force-app/main/core/objects/DeploymentInformation__c/fields/DeploymentDate__c.field-meta.xml
<CustomField>
    <fullName>DeploymentDate__c</fullName>
    <label>Deployment Date</label>
    <type>DateTime</type>
</CustomField>